move posts from classicscoder

--- a/_posts/2017-02-17-cpp.md
+++ b/_posts/2017-02-17-cpp.md
@@ -1,4 +1,4 @@
-## Forget Swift, C# and Java: Learn C++!
+## 🧑🏻‍💻 Forget Swift, C# and Java: Learn C++!
 
 Shocked about the headline? I'm sure you are. But let me explain why... In our industry (especially in software development) we forced to learn new technologies and paradigm all the time. This is true also for programming languages. And that's good, it gives us work... Maybe you followed the discussions when Swift came up (like C# many years ago) and people start to switch from Objective-C over to Swift. It ends almost in a very religious movement...
 
