move posts from classicscoder

--- a/_posts/2021-03-31-pitrex.md
+++ b/_posts/2021-03-31-pitrex.md
@@ -16,7 +16,9 @@ In comparison to that, the Raspberry Pi Zero is a beast :
 - 512MB (vs. 1024 bytes)
 - 1 GHz Cpu (vs. 1.5 MhZ)
 - PLUS: Wireless Connectivity
- 
+
+![Pitrex](images/pitrex.png)
+
 # For who is the PiTrex?
  
 At the moment the PiTrex is a device intended for developers. Many software is still in progress or missing.
