move posts from classicscoder

--- a/_posts/2021-03-31-pitrex.md
+++ b/_posts/2021-03-31-pitrex.md
@@ -17,7 +17,7 @@ In comparison to that, the Raspberry Pi Zero is a beast :
 - 1 GHz Cpu (vs. 1.5 MhZ)
 - PLUS: Wireless Connectivity
 
-![Pitrex](images/pitrex.png)
+![Pitrex](/images/pitrex.png)
 
 # For who is the PiTrex?
  
