--- a/_posts/2017-02-17-cpp.md
+++ b/_posts/2017-02-17-cpp.md
@@ -2,7 +2,7 @@
 
 Shocked about the headline? I'm sure you are. But let me explain why... In our industry (especially in software development) we forced to learn new technologies and paradigm all the time. This is true also for programming languages. And that's good, it gives us work... Maybe you followed the discussions when Swift came up (like C# many years ago) and people start to switch from Objective-C over to Swift. It ends almost in a very religious movement...
 
-![C++](images/cpp.jpg)
+![C++](/images/cpp.jpg)
 
 I've also "switched" in 98% of the projects to Swift. As a software engineer you follow the market, right? But it's also a fact, that you can not be on the same expert level on all the different programming languages, frameworks, SDK's and technologies. So you must decide...
 
