move posts from classicscoder

--- a/_posts/2024-06-02-vectrec.md
+++ b/_posts/2024-06-02-vectrec.md
@@ -1,4 +1,4 @@
-## VectreC
+## 🕹️ VectreC
 
 VectreC is a Visual Studio Code Extension that allows you to do game programming in C for the Vectrex.
 
@@ -16,14 +16,17 @@ Once finished, it will have the following features:
 
 While VectreC is still in development, it's already a powerful tool for game programming in C. It's compatible with macOS and Linux, allowing you to start coding games immediately.
 
+![VectreC](/images/vectrec-002.webp)
 
 VectreC running on a Raspberry Pi 400
 How to use VectreC?
 After installation, $HOME/vectrec should look like this:
 
+![VectreC](/images/vectrec-003.webp)
 
 To test if the installation was successful, you can open sample.code-workspace. by double-clicking it. When open, select main.c in the Visual Studio Code project browser and press Cmd+Shift+B or Ctrl+Shift+B on Linux). This compiles the C file and runs it automatically in the emulator. If the installation was correct, it should look like in the screenshot below:
 
+![VectreC](/images/vectrec-004.webp)
 
 Additional commands and features will come soon, but first, that’s all you need to start with VectreC.
 
