--- a/_posts/2024-06-02-vectrec.md
+++ b/_posts/2024-06-02-vectrec.md
@@ -1,4 +1,4 @@
-## 🕹️ VectreC
+## 🕹️ VectreC - Vectrex C-Compiler
 
 VectreC is a Visual Studio Code Extension that allows you to do game programming in C for the Vectrex.
 
