consolidate various posts in code stories

--- a/_posts/2021-03-31-pitrex.md
+++ b/_posts/2021-03-31-pitrex.md
@@ -1,4 +1,8 @@
-## 🕹️ PiTrex - The coolest Card for the Vectrex!
+---
+layout: post
+---
+
+## 📺 PiTrex - The coolest Card for the Vectrex!
  
 The PiTrex cartridge connects a Raspberry Pi Zero with a Vectrex.
 It is a cartridge that allows to run programs and games on the Raspberry Pi
