--- a/_posts/2023-11-09-arbasic.md
+++ b/_posts/2023-11-09-arbasic.md
@@ -1,3 +1,7 @@
+---
+layout: post
+---
+
 ## 👓 XR BASIC - Retro Coding on XR
 
 It finally works :) A side project I'm worked on for a while. Just take a keyboard and some AR glasses and start to learn BASIC, like it was in the 80s.
