--- a/_posts/2025-01-11-c64-assembler.md
+++ b/_posts/2025-01-11-c64-assembler.md
@@ -59,7 +59,7 @@ Of course, you can use an emulator to follow this tutorial as well. I recommend 
 ### Program 1 - Print a character
 
 ```PRG1.PRG```
-```basic
+```nasm
 1 !
 2 ! print char
 3 !
@@ -85,7 +85,7 @@ To assemble the code, simply type the command `ASSEMBLE`. If there are no errors
 
 To execute it, use the following BASIC command:
 
-```basic
+```nasm
 SYS(4096)
 ```
 
@@ -101,7 +101,7 @@ We know now, how to output something on screen, let's figure out next, how we ha
 ### Program 2 - Wait for user input
 
 ```PRG2.PRG```
-```basic
+```nasm
 1 !
 2 ! wait char
 3 !
@@ -123,7 +123,7 @@ And that’s it! Simple, right? This small program shows how to use a loop and k
 ### Program 3 - Change border color
 
 ```PRG3.PRG```
-```basic
+```nasm
 1 !
 2 ! change border color
 3 !
@@ -156,7 +156,7 @@ That's it. Cool effect and a lot of new stuff learned. Still here?
 We’ve now explored how to handle user input and display output on the screen. Let’s combine these concepts to lay the foundation for our upcoming game.
 
 ```PRG4.PRG```
-```basic
+```nasm
 1 !
 2 ! simple "ball game"
 3 !
