--- a/_posts/2025-04-28-c64-assembler-2.md
+++ b/_posts/2025-04-28-c64-assembler-2.md
@@ -2,7 +2,7 @@
 layout: post
 ---
 
-# 👾 Building a Game Like It's 1982: A Journey Into Commodore 64 Memory
+# 👾 One Byte at a Time: The Story of a C64 Game
 
 ![Beauty of Code](/images/c64-the-beauty-of-code.jpg)
 
@@ -83,7 +83,7 @@ Too low, and `$CF` would stop you.
 
 ---
 
-## Chapter 4: The Game Loop, the Pulse of Life
+## Chapter 4: Game Loop, the Pulse of Life
 
 At the heart of it all, a simple but relentless drumbeat:
 
