--- a/_posts/2025-04-28-c64-assembler-2.md
+++ b/_posts/2025-04-28-c64-assembler-2.md
@@ -171,3 +171,5 @@ And the beauty is, you can too.
 **Eager to play now?**
 
 Try it on the emulator or on a real C64, here is the [assembled code](/files/pong.prg).
+
+And here is the full source code, [500 lines of Assembler Code](https://gist.github.com/rogerboesch/7ad15aa4e267750d0aa4bdfbfcfb9203).
