--- a/_posts/2025-10-20-picocalc.md
+++ b/_posts/2025-10-20-picocalc.md
@@ -2,7 +2,7 @@
 layout: post
 ---
 
-# Retro Programming on the Raspberry Pi Pico 2  
+# 📺 Retro Programming on the Raspberry Pi Pico 2  
 ## Going Bare Metal with C, SPI, and DMA — and Turning the PicoCalc into a Retro Computer
 
 When I started playing with the Raspberry Pi Pico 2, my first thought wasn’t *“Let’s run MicroPython.”* It was *“Can I go bare metal?”* — that is, write clean C code, talk to hardware directly, and see pixels or bytes move without an OS or framework in the way.  
