Smal fixes and updates

--- a/_posts/2025-10-20-picocalc.md
+++ b/_posts/2025-10-20-picocalc.md
@@ -5,7 +5,7 @@ layout: post
 # 📺 Retro Programming on the Raspberry Pi Pico 2  
 ## Going Bare Metal with C, SPI, and DMA — and Turning the PicoCalc into a Retro Computer
 
-When I started playing with the Raspberry Pi Pico 2, my first thought wasn’t *“Let’s run MicroPython.”* It was *“Can I go bare metal?”* — that is, write clean C code, talk to hardware directly, and see pixels or bytes move without an OS or framework in the way.  
+When I started playing with the Raspberry Pi Pico 2, my first thought wasn’t *“Let’s run MicroPython.”* It was *“Can I go bare metal?”* — that is, write clean C code, talk to hardware directly, and see pixels or bytes move without an OS, SDK or framework in the way.  
 That’s exactly what I did. And if you’re into retro programming, the Pico 2 is a fascinating little board to explore this with.
 
 ---
@@ -13,22 +13,22 @@ That’s exactly what I did. And if you’re into retro programming, the Pico 2 
 > 💡 **From ZX81 to PicoCalc: 40 Years of Direct Hardware Joy**  
 > My journey started with the **ZX80** and **ZX81** — small, humble machines that forced you to understand every byte you wrote.  
 > There was something magical about typing directly into memory, about *owning* every part of the system.  
-> For years, I’ve wanted that feeling back — and now, with the **PicoCalc**, that dream has returned.
+> For years, I’ve wanted that feeling back — and now, with the **PicoCalc**, that dream has returned in a portable form factor.
 
 ---
 
-Out of the box, the PicoCalc runs **BASIC** or **MicroPython**, which is fine for quick experiments — but not for me.  
+Out of the box, the PicoCalc runs only **BASIC** or **MicroPython**, which is fine for quick experiments — but not for me.  
 My world has always been **C** and **Assembler**. I want full control of the hardware: timers, DMA, SPI, and the CPU itself.  
 That’s where the **Raspberry Pi Pico 2** inside the PicoCalc comes into play — a perfect foundation for a personal, portable retro machine.
 
-Over the past months, I’ve already written emulators for the **Z80**, the **Jupiter Ace** (a FORTH-based computer from the early ’80s), and even the **Vectrex** console.  
-The PicoCalc is now my perfect platform to continue that journey — and my next step is to integrate a **full assembler environment** to program directly on the PicoCalc itself.
+Over the past months, I’ve already written emulators for the **Z80**, the **Jupiter Ace** (a FORTH-based computer from the early ’80s), and even the **Vectrex** game console.  
+The PicoCalc is now my perfect platform to continue that journey — and my next step is to integrate a **full assembler environment** to program games directly on the PicoCalc itself.
 
----
+![Vectrex emulator on PicoCalc](/images/picocalc-vectrex.jpg)
 
 ## Why the Pico 2 Is a Great Retro Platform
 
-The new **Raspberry Pi Pico 2** uses the **RP2350** microcontroller, a dual-core ARM Cortex-M33 running up to 150 MHz with hardware floating-point, USB, SPI, I²C, DMA, and even optional vector processing extensions.
+The **Raspberry Pi Pico 2** uses the **RP2350** microcontroller, a dual-core ARM Cortex-M33 running up to 150 MHz with hardware floating-point, USB, SPI, I²C, DMA, and even optional vector processing extensions.
 
 Compared to old 8-bit machines, this is *luxurious horsepower* — yet the principles are the same:  
 you write to memory-mapped registers, use bitwise operations to control hardware, and manage timing carefully.
@@ -225,7 +225,7 @@ It’s primitive, direct, and incredibly satisfying — like poking registers on
 # The PicoCalc: A Handheld Retro Playground
 
 Here’s where everything comes together.
-The PicoCalc is my modern-day equivalent of a pocket computer — small, battery-powered, with a screen and buttons, and powered by the same RP2350 that runs the Pico 2.
+The PicoCalc is my modern-day equivalent of a pocket computer — small, battery-powered, with a screen and buttons, and powered by the same Pico 2.
 
 I’ve already ported my Z80, Jupiter Ace, and Vectrex emulators to it.
 Running these on such a tiny, self-contained device feels magical — like holding a collection of classic computers in your hand.
@@ -256,12 +256,12 @@ Whether you’re generating sound waves, driving a display, or emulating a vinta
 
 In my next post, I’ll show how to:
 
-- Build a simple frame buffer for SPI displays
+- Build a (simple) frame buffer for SPI displays
 - Use DMA and interrupts to simulate old-style video timing
 - Integrate my assembler into the PicoCalc runtime
 - Port classic emulator and games directly to it
 
-Because once you’ve gone bare metal… there’s no going back.
+Because once you’ve gone bare metal… there’s no going back ;)
 
 {% include youtubeplayer.html id="5Q_I78WQdLQ" %}
 
@@ -271,7 +271,7 @@ Because once you’ve gone bare metal… there’s no going back.
 Emulates the Motorola 6809 CPU and the vector-based display logic. Using DMA and hardware timers, the Pico 2 can render smooth line graphics — a remarkable achievement for a microcontroller.
 
 - **Z80 Emulator**:
-A fast and cycle-accurate core designed for multiple classic systems. Used as the base for my Jupiter Ace emulator.
+A fast and cycle-accurate core designed for multiple classic systems. Used as the base for my Jupiter Ace emulator. More to come ...
 
 - **Jupiter Ace Emulator**:
 Faithfully reproduces the quirky FORTH-based machine. On the PicoCalc, it runs smoothly with keyboard input and SPI-based display output.
